test/visibility/import/relative/import-relative-error4.good
import-relative-error4.chpl:5: error: Cannot find symbol 'super' in module 'K'
