test/visibility/import/relative/import-relative-error4.chpl
module M {

  module K { }

  import this.K.super;
}
